--- a/src/main/resources/fxml/AnswerToMessageForum.fxml
+++ b/src/main/resources/fxml/AnswerToMessageForum.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<<<<<<< HEAD
-=======
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
@@ -9,7 +7,6 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
->>>>>>> 84e10a6e6143963984a8c08ec3f4ad33979a5903
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -23,17 +20,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<<<<<<< HEAD
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="632.0" style="-fx-background-color: #e3e3e3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.NoticeAdminController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="632.0" style="-fx-background-color: #e3e3e3;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.NoticeAdminController">
    <children>
       <Line endX="103.0" layoutX="424.0" layoutY="40.0" startX="-374.3999938964844" startY="7.62939453125E-6" stroke="#ff4007" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
-      <Button layoutX="439.0" layoutY="354.0" mnemonicParsing="false" onAction="#add" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: #00154f; -fx-background-radius: 5 5 5 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="  Send" textFill="WHITE">
-=======
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="632.0" style="-fx-background-color: #e3e3e3;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.AddNewMessageController">
-   <children>
-      <Line endX="103.0" layoutX="424.0" layoutY="40.0" startX="-374.3999938964844" startY="7.62939453125E-6" stroke="#ff4007" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
-      <Button alignment="CENTER" layoutX="438.0" layoutY="354.0" mnemonicParsing="false" onAction="#send" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: #00154f; -fx-background-radius: 5 5 5 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text=" Send" textFill="WHITE">
->>>>>>> 84e10a6e6143963984a8c08ec3f4ad33979a5903
+      <Button layoutX="438.0" layoutY="358.0" mnemonicParsing="false" onAction="#add" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: #00154f; -fx-background-radius: 5 5 5 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="  Send" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -160,19 +150,12 @@
             <Image url="@../static/images/ss.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="443.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="443.0" layoutY="364.0" pickOnBounds="true" preserveRatio="true">
          <image>
-<<<<<<< HEAD
-            <Image url="@../static/PNG@2_white_icons/icons8_send_comment_48px.png" />
+            <Image url="@../static/PNG@2_white_icons/icons8_send_comment_48px_5.png" />
          </image>
       </ImageView>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="231.0" layoutY="61.0" prefHeight="30.0" prefWidth="186.0" style="-fx-background-radius: 8; -fx-background-color: linear-gradient(to bottom left,  #00154f, #ff0000);" stylesheets="@../css/style.css" text="Add new discussion" textFill="WHITE">
-=======
-            <Image url="@../static/PNG@2_white_icons/icons8_send_comment_48px_3.png" />
-         </image>
-      </ImageView>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="229.0" layoutY="55.0" prefHeight="30.0" prefWidth="186.0" style="-fx-background-radius: 8; -fx-background-color: linear-gradient(to bottom left,  #00154f, #ff0000);" stylesheets="@../css/style.css" text="Add new discussion" textFill="WHITE">
->>>>>>> 84e10a6e6143963984a8c08ec3f4ad33979a5903
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="212.0" layoutY="82.0" prefHeight="30.0" prefWidth="240.0" style="-fx-background-radius: 8;" styleClass="linear-grad5" stylesheets="@../css/style.css" text="Answer to selected question" textFill="WHITE">
          <font>
             <Font name="Arial" size="17.0" />
          </font>
@@ -180,75 +163,31 @@
             <DropShadow color="#0899ff" />
          </effect>
       </Label>
-<<<<<<< HEAD
-      <Label layoutX="90.0" layoutY="123.0" prefHeight="17.0" prefWidth="40.0" text="Topic" textFill="#00154f" />
-      <Label layoutX="89.0" layoutY="175.0" text="Message" textFill="#00154f" />
-      <TextArea layoutX="182.0" layoutY="174.0" prefHeight="133.0" prefWidth="336.0" promptText="Message...">
-=======
-      <Label layoutX="77.0" layoutY="138.0" prefHeight="17.0" prefWidth="40.0" text="Topic" textFill="#00154f" />
-      <Label layoutX="78.0" layoutY="177.0" text="Message" textFill="#00154f" />
-      <TextArea fx:id="message_id" layoutX="181.0" layoutY="177.0" prefHeight="128.0" prefWidth="336.0" promptText="Message...">
->>>>>>> 84e10a6e6143963984a8c08ec3f4ad33979a5903
+      <Label layoutX="83.0" layoutY="156.0" text="Message" textFill="#00154f" />
+      <TextArea layoutX="176.0" layoutY="155.0" prefHeight="133.0" prefWidth="336.0" promptText="Your answer...">
          <effect>
             <DropShadow />
          </effect>
       </TextArea>
-<<<<<<< HEAD
-      <TextField layoutX="182.0" layoutY="119.0" prefHeight="25.0" prefWidth="336.0" promptText="Topic of the discussion...">
-=======
-      <TextField fx:id="topic_id" layoutX="181.0" layoutY="129.0" prefHeight="25.0" prefWidth="336.0" promptText="Topic of the discussion...">
->>>>>>> 84e10a6e6143963984a8c08ec3f4ad33979a5903
-         <effect>
-            <DropShadow />
-         </effect>
-      </TextField>
-<<<<<<< HEAD
-      <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="127.0" layoutY="124.0" pickOnBounds="true" preserveRatio="true">
-=======
-      <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="129.0" layoutY="138.0" pickOnBounds="true" preserveRatio="true">
->>>>>>> 84e10a6e6143963984a8c08ec3f4ad33979a5903
+      <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="136.0" layoutY="156.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../static/PNG@2_white_icons/icons8_attention_60px.png" />
          </image>
       </ImageView>
-<<<<<<< HEAD
-      <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="142.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
-=======
-      <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="129.0" layoutY="179.0" pickOnBounds="true" preserveRatio="true">
->>>>>>> 84e10a6e6143963984a8c08ec3f4ad33979a5903
+      <Label layoutX="176.0" layoutY="298.0" prefHeight="17.0" prefWidth="231.0" text="This form includes required fields, marked" textFill="#00154f" />
+      <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="399.0" layoutY="298.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../static/PNG@2_white_icons/icons8_attention_60px.png" />
          </image>
       </ImageView>
-<<<<<<< HEAD
-      <Label layoutX="182.0" layoutY="320.0" prefHeight="17.0" prefWidth="231.0" text="This form includes required fields, marked" textFill="#00154f" />
-      <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="407.0" layoutY="320.0" pickOnBounds="true" preserveRatio="true">
-=======
-      <Label layoutX="182.0" layoutY="310.0" prefHeight="17.0" prefWidth="231.0" text="This form includes required fields, marked" textFill="#00154f" />
-      <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="407.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true">
->>>>>>> 84e10a6e6143963984a8c08ec3f4ad33979a5903
-         <image>
-            <Image url="@../static/PNG@2_white_icons/icons8_attention_60px.png" />
-         </image>
-      </ImageView>
-<<<<<<< HEAD
-      <Button layoutX="346.0" layoutY="354.0" mnemonicParsing="false" onAction="#add" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: #f00; -fx-background-radius: 5 5 5 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="   Cancel" textFill="WHITE">
-=======
-      <Button layoutX="337.0" layoutY="354.0" mnemonicParsing="false" onAction="#cancel" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: #f00; -fx-background-radius: 5 5 5 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="  Cancel" textFill="WHITE">
->>>>>>> 84e10a6e6143963984a8c08ec3f4ad33979a5903
+      <Button layoutX="346.0" layoutY="358.0" mnemonicParsing="false" onAction="#add" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: #f00; -fx-background-radius: 5 5 5 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="   Cancel" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-<<<<<<< HEAD
-      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="349.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../static/PNG@2_white_icons/icons8_cancel_48px_1.png" />
-=======
-      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="340.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="349.0" layoutY="364.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../static/PNG@2_white_icons/icons8_cancel_48px_2.png" />
->>>>>>> 84e10a6e6143963984a8c08ec3f4ad33979a5903
          </image>
       </ImageView>
    </children>
