--- a/src/main/resources/fxml/HomeProfessor.fxml
+++ b/src/main/resources/fxml/HomeProfessor.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
@@ -18,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="632.0" style="-fx-background-color: #e3e3e3;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.HomeProfessorController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="632.0" style="-fx-background-color: #e3e3e3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.HomeProfessorController">
    <children>
       <Pane layoutX="387.0" prefHeight="68.0" prefWidth="245.0" style="-fx-background-radius: 20 0 0 0;" styleClass="linear-grad" stylesheets="@../css/style.css" AnchorPane.leftAnchor="387.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -34,7 +28,7 @@
          <children>
             <AnchorPane layoutX="68.0" layoutY="84.0" prefHeight="331.0" prefWidth="567.0" style="-fx-background-color: #e4e4e4; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0); -fx-background-radius: 20 0 0 20;">
                <children>
-                  <Pane fx:id="home" layoutX="55.0" layoutY="55.0" onMouseClicked="#goHome" prefHeight="90.0" prefWidth="198.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                  <Pane fx:id="home" layoutX="32.0" layoutY="39.0" onMouseClicked="#goHome" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
                         <Pane layoutX="-1.0" layoutY="-3.0" onMouseClicked="#goHome" prefHeight="96.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
                            <children>
@@ -48,18 +42,18 @@
                               </ImageView>
                            </children>
                         </Pane>
-                        <Text fill="WHITE" layoutX="69.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home" textAlignment="CENTER" wrappingWidth="60.53668212890625">
+                        <Text fill="WHITE" layoutX="45.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home" textAlignment="CENTER" wrappingWidth="60.53668212890625">
                            <font>
                               <Font size="22.0" />
                            </font>
                         </Text>
                      </children>
                   </Pane>
-                  <Pane layoutX="55.0" layoutY="187.0" onMouseClicked="#goCourse" prefHeight="90.0" prefWidth="198.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                  <Pane layoutX="32.0" layoutY="171.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
-                        <Pane layoutY="-5.0" onMouseClicked="#goCourse" prefHeight="99.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
+                        <Pane layoutY="-5.0" prefHeight="99.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
                            <children>
-                              <ImageView fitHeight="26.0" fitWidth="27.0" layoutX="5.0" layoutY="37.0" onMouseClicked="#goCourse" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="26.0" fitWidth="27.0" layoutX="5.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                                  <effect>
                                     <DropShadow />
                                  </effect>
@@ -69,18 +63,18 @@
                               </ImageView>
                            </children>
                         </Pane>
-                        <Text fill="WHITE" layoutX="58.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Courses">
+                        <Text fill="WHITE" layoutX="49.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Courses">
                            <font>
                               <Font name="Arial" size="22.0" />
                            </font>
                         </Text>
                      </children>
                   </Pane>
-                  <Pane layoutX="292.0" layoutY="55.0" onMouseClicked="#goNotice" prefHeight="90.0" prefWidth="198.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                  <Pane layoutX="207.0" layoutY="39.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
-                        <Pane layoutX="-1.0" layoutY="-4.0" onMouseClicked="#goNotice" prefHeight="98.0" prefWidth="40.0" style="-fx-background-color: b72801;">
+                        <Pane layoutX="-1.0" layoutY="-4.0" prefHeight="98.0" prefWidth="40.0" style="-fx-background-color: b72801;">
                            <children>
-                              <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="8.0" layoutY="37.0" onMouseClicked="#goNotice" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="8.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                                  <effect>
                                     <DropShadow />
                                  </effect>
@@ -90,18 +84,60 @@
                               </ImageView>
                            </children>
                         </Pane>
-                        <Text fill="WHITE" layoutX="62.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notices">
+                        <Text fill="WHITE" layoutX="61.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notices">
                            <font>
                               <Font name="Arial" size="22.0" />
                            </font>
                         </Text>
                      </children>
                   </Pane>
-                  <Pane layoutX="292.0" layoutY="187.0" onMouseClicked="#goForum" prefHeight="90.0" prefWidth="198.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                  <Pane layoutX="206.0" layoutY="171.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
-                        <Pane layoutX="-1.0" layoutY="-4.0" onMouseClicked="#goForum" prefHeight="98.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
+                        <Pane layoutX="-2.0" layoutY="-5.0" prefHeight="100.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
                            <children>
-                              <ImageView fitHeight="27.0" fitWidth="26.0" layoutX="7.0" layoutY="39.0" onMouseClicked="#goForum" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="34.0" fitWidth="34.0" layoutX="2.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
+                                 <image>
+                                    <Image url="@../static/PNG@2_white_icons/icons8_inscription_60px.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </Pane>
+                        <Text fill="WHITE" layoutX="37.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reinscription" wrappingWidth="115.17773437500011">
+                           <font>
+                              <Font name="Arial" size="19.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </Pane>
+                  <Pane layoutX="376.0" layoutY="39.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                     <children>
+                        <Pane layoutY="-4.0" prefHeight="99.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
+                           <children>
+                              <ImageView fitHeight="26.0" fitWidth="27.0" layoutX="4.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
+                                 <image>
+                                    <Image url="@../static/PNG@2_white_icons/file_double%20%5B%231715%5D.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </Pane>
+                        <Text fill="WHITE" layoutX="29.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" Documents" textAlignment="CENTER" wrappingWidth="125.8731689453125">
+                           <font>
+                              <Font name="Arial" size="21.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </Pane>
+                  <Pane layoutX="376.0" layoutY="171.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                     <children>
+                        <Pane layoutX="-1.0" layoutY="-4.0" prefHeight="98.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
+                           <children>
+                              <ImageView fitHeight="27.0" fitWidth="26.0" layoutX="7.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
                                  <effect>
                                     <DropShadow />
                                  </effect>
@@ -111,7 +147,7 @@
                               </ImageView>
                            </children>
                         </Pane>
-                        <Text fill="WHITE" layoutX="67.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forum">
+                        <Text fill="WHITE" layoutX="64.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forum">
                            <font>
                               <Font name="Arial" size="22.0" />
                            </font>
@@ -150,9 +186,9 @@
                         </ImageView>
                      </children>
                   </Pane>
-                  <Pane layoutY="106.0" onMouseClicked="#goNotice" prefHeight="40.0" prefWidth="51.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+                  <Pane layoutY="101.0" prefHeight="40.0" prefWidth="51.0" styleClass="bar-btn" stylesheets="@../css/style.css">
                      <children>
-                        <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="5.0" onMouseClicked="#goNotice" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                            <effect>
                               <DropShadow />
                            </effect>
@@ -162,9 +198,21 @@
                         </ImageView>
                      </children>
                   </Pane>
-                  <Pane layoutY="149.0" onMouseClicked="#goCourse" prefHeight="40.0" prefWidth="51.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+                  <Pane layoutY="142.0" prefHeight="40.0" prefWidth="51.0" styleClass="bar-btn" stylesheets="@../css/style.css">
                      <children>
-                        <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="6.0" onMouseClicked="#goCourse" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                           <effect>
+                              <DropShadow />
+                           </effect>
+                           <image>
+                              <Image url="@../static/PNG@2_white_icons/file_double%20%5B%231715%5D.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </Pane>
+                  <Pane layoutY="177.0" prefHeight="40.0" prefWidth="51.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+                     <children>
+                        <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                            <effect>
                               <DropShadow />
                            </effect>
@@ -174,9 +222,21 @@
                         </ImageView>
                      </children>
                   </Pane>
-                  <Pane layoutY="194.0" onMouseClicked="#goForum" prefHeight="40.0" prefWidth="51.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+                  <Pane layoutY="210.0" prefHeight="40.0" prefWidth="51.0" styleClass="bar-btn" stylesheets="@../css/style.css">
                      <children>
-                        <ImageView fitHeight="30.0" fitWidth="23.0" layoutX="13.0" layoutY="10.0" onMouseClicked="#goForum" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                           <effect>
+                              <DropShadow />
+                           </effect>
+                           <image>
+                              <Image url="@../static/PNG@2_white_icons/icons8_inscription_60px.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </Pane>
+                  <Pane layoutY="246.0" prefHeight="40.0" prefWidth="51.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+                     <children>
+                        <ImageView fitHeight="30.0" fitWidth="23.0" layoutX="13.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                            <effect>
                               <DropShadow />
                            </effect>
